--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.0",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4",
+    "i18next": "^23.7.6",
+    "react-i18next": "^13.5.0",
+    "i18next-http-backend": "^2.4.2",
+    "i18next-browser-languagedetector": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-i18next": "^7.8.3"
   }
 }
