--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
 version: '3.8'
-
 services:
-  marble-front:
-    build: .
-    ports:
-      - "3000:3000"
-    environment:
-      - NODE_ENV=development
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    networks:
+      - traefik-network
+
+networks:
+  traefik-network:
+    external: true
