--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,25 +5,18 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      target: ${BUILD_TARGET:-production}  # development ou production
+      target: production  # Toujours production sur le VPS
     container_name: frontend
     restart: always
     networks:
       - traefik-network
-    ports:
-      - "${FRONTEND_PORT:-3000}:${INTERNAL_PORT:-80}"  # 3000:3000 en dev, 3000:80 en prod (ou rien avec Traefik)
-    volumes:
-      # Hot reload uniquement en dev
-      - ${HOT_RELOAD:-.:/app/node_modules}
-    environment:
-      - NODE_ENV=${NODE_ENV:-production}
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.frontend.rule=Host(`samyhama.fr`) || Host(`www.samyhama.fr`)"
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls=true"
       - "traefik.http.routers.frontend.tls.certresolver=myresolver"
-      - "traefik.http.services.frontend.loadbalancer.server.port=${INTERNAL_PORT:-80}"
+      - "traefik.http.services.frontend.loadbalancer.server.port=80"
       - "traefik.docker.network=traefik-network"
 
 networks:
